--- a/EatApplication/Eat/src/main/AndroidManifest.xml
+++ b/EatApplication/Eat/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
 
     <uses-sdk
         android:minSdkVersion="16"
-        android:targetSdkVersion="16"/>
+        android:targetSdkVersion="16" />
 
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="com.android.browser.permission.READ_HISTORY_BOOKMARKS" />
     <uses-permission android:name="com.android.browser.permission.WRITE_HISTORY_BOOKMARKS" />
@@ -24,7 +24,7 @@
         <activity
             android:name=".StartActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Black" >
+            android:theme="@android:style/Theme.Black">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -80,10 +80,14 @@
         <activity
             android:name="com.eat.chapter5.MessengerTwowayActivity"
             android:theme="@android:style/Theme.Black" />
-        <service android:name="com.eat.chapter5.WorkerThreadService"
+
+        <service
+            android:name="com.eat.chapter5.WorkerThreadService"
+            android:enabled="true"
+            android:exported="true"
             android:process=":eatservice">
             <intent-filter>
-                <action android:name="com.eat.chapter5.ACTION_BIND"/>
+                <action android:name="com.eat.chapter5.ACTION_BIND" />
             </intent-filter>
         </service>
 
@@ -140,24 +144,25 @@
         <activity
             android:name="com.eat.chapter11.BluetoothActivity"
             android:theme="@android:style/Theme.Black" />
-        <service android:name="com.eat.chapter11.BluetoothService"/>
+
+        <service android:name="com.eat.chapter11.BluetoothService" />
         <activity
             android:name="com.eat.chapter11.DownloadActivity"
             android:theme="@android:style/Theme.Black" />
         <service android:name="com.eat.chapter11.DownloadService">
             <intent-filter>
-                <action android:name="com.eat.ACTION_DOWNLOAD"/>
+                <action android:name="com.eat.ACTION_DOWNLOAD" />
                 <data android:scheme="http" />
             </intent-filter>
         </service>
         <activity
             android:name="com.eat.chapter11.BoundLocalActivity"
             android:theme="@android:style/Theme.Black" />
-        <service android:name="com.eat.chapter11.BoundLocalService"/>
+        <service android:name="com.eat.chapter11.BoundLocalService" />
         <activity
             android:name="com.eat.chapter11.BoundLocalActivity2"
             android:theme="@android:style/Theme.Black" />
-        <service android:name="com.eat.chapter11.BoundLocalService2"/>
+        <service android:name="com.eat.chapter11.BoundLocalService2" />
 
         <!-- CHAPTER 12 -->
         <activity
@@ -166,11 +171,12 @@
         <activity
             android:name="com.eat.chapter12.WebServiceActivity"
             android:theme="@android:style/Theme.Black" />
-        <service android:name="com.eat.chapter12.WebService"/>
+
+        <service android:name="com.eat.chapter12.WebService" />
         <activity
             android:name="com.eat.chapter12.AlarmBroadcastActivity"
             android:theme="@android:style/Theme.Black" />
-        <service android:name="com.eat.chapter12.NetworkCheckerIntentService"/>
+        <service android:name="com.eat.chapter12.NetworkCheckerIntentService" />
 
         <!-- CHAPTER 13 -->
         <activity
